--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,6 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>4.1.0</version>
 		</dependency>
-
-
 	</dependencies>
 
 	<build>
@@ -47,6 +45,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.2.3</version><!-- Versão compatível com Java 17 -->
 				<configuration>
 					<excludes>
 						<exclude>
